--- a/CourseShop/CourseShop.Web/Views/Account/Register.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Account/Register.cshtml
@@ -19,6 +19,34 @@
 
         <header><h2> عضویت در سایت </h2></header>
 
+        @if (ViewBag.IsSuccess == true)
+        {
+            <div class="alert alert-success">
+                <p class="help-text">
+                    @Model.Username عزیز ثبت نام با موفقیت انجام شد
+                </p>
+                <p class="help-text">
+                    ایمیلی حاوی لینک فعال سازی به @Model.Email ارسال گردید
+                </p>
+                <p class="help-text">
+                    لطفا از طریق لینک اقدام به فعال سازی نمایید
+                </p>
+            </div>
+        }
+
+
+        @if (ViewBag.EmailIsTaken == true)
+        {
+            <div>
+
+            </div>
+        }
+
+        @if (ViewBag.UserIsTaken == true)
+        {
+
+        }
+
         <div class="form-layer">
 
             <form asp-controller="account" asp-action="Register" method="post">
