--- a/CourseShop/CourseShop.Web/Views/Shared/_Layout.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Shared/_Layout.cshtml
@@ -5,11 +5,11 @@
     <title> فروشگاه دوره  | @ViewData["Title"] </title>
     <partial name="_MetaTags" />
     <partial name="_Styles" />
-    <script src="js/jquery.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
 </head>
 
 <body>
-    <script src="js/modernizr-custom.js"></script>
+    <script src="/js/modernizr-custom.js"></script>
     <div class="landing-layer">
         <div class="container">
             <partial name="_Nav" />
@@ -26,10 +26,10 @@
 
     <partial name="_Footer" />
     <!-- footer -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/jquery.validate.unobtrusive.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/jquery.validate.min.js"></script>
+    <script src="/js/jquery.validate.unobtrusive.min.js"></script>
 </body>
 </html>
 
