--- a/CourseShop/CourseShop.Web/Views/Shared/_ActiveEmail.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Shared/_ActiveEmail.cshtml
@@ -4,6 +4,6 @@
     <h2>@Model.Username عزیز !</h2>
     <p>با تشکر از ثبت نام شما در تاپ لرن ، جهت ادامه کار میبایست حساب کاربری خود را فعال کنید</p>
     <p>
-        <a href="http://localhost:49563/Account/ActiveAccount/@Model.ActivateCode">فعالسازی حساب کاربری</a>
+        <a href="https://localhost:44361/Account/ActiveAccount/@Model.ActivateCode">فعالسازی حساب کاربری</a>
     </p>
 </div>
