--- a/CourseShop/CourseShop.Web/Views/Shared/_Nav.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Shared/_Nav.cshtml
@@ -11,13 +11,13 @@
         </div>
         <div class="col-sm-6 col-xs-12">
             <div class="clientarea">
-                <div class="loggein ">
-                    <i class="zmdi zmdi-account"></i><a href=""> ایمان مدائنی ، خوش آمدی </a>
+                <div class="loggein hidden ">
+                    <i class="zmdi zmdi-account"></i><a href=""> هاتف خودکار ، خوش آمدی </a>
                 </div>
-                <div class="signin hidden">
+                <div class="signin ">
                     <i class="zmdi zmdi-account"></i>
-                    <a href=""> ورود </a> /
-                    <a href=""> عضویت </a>
+                    <a href="/login"> ورود </a> /
+                    <a href="/register"> عضویت </a>
                 </div>
             </div>
         </div>
