implement Login and Authorization and ForGotPassword

--- a/CourseShop/CourseShop.Web/Views/Shared/_ActiveEmail.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Shared/_ActiveEmail.cshtml
@@ -2,7 +2,7 @@
 
 <div style="direction: rtl; padding: 20px">
     <h2>@Model.Username عزیز !</h2>
-    <p>با تشکر از ثبت نام شما در تاپ لرن ، جهت ادامه کار میبایست حساب کاربری خود را فعال کنید</p>
+    <p>با تشکر از ثبت نام شما در فروشگاه دوره ، جهت ادامه کار میبایست حساب کاربری خود را فعال کنید</p>
     <p>
         <a href="https://localhost:44361/Account/ActiveAccount/@Model.ActivateCode">فعالسازی حساب کاربری</a>
     </p>
