--- a/CourseShop/CourseShop.Web/Views/Account/Login.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Account/Login.cshtml
@@ -1,10 +1,12 @@
-﻿@{
+﻿@model CourseShop.Core.DTO.LoginViewModel
+
+@{
     ViewData["Title"] = "ورود به سایت";
 }
 <div class="container">
     <nav aria-label="breadcrumb">
         <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/home">تاپ لرن</a></li>
+            <li class="breadcrumb-item"><a href="/home">فروشگاه دوره</a></li>
             <li class="breadcrumb-item active" aria-current="page">ورود به سایت</li>
         </ul>
     </nav>
@@ -15,31 +17,68 @@
 
         <header><h2> ورود به سایت </h2></header>
 
+        @if (ViewBag.IsSuccess == true)
+        {
+            <div class="alert alert-success">
+                <h2 class="help-text">
+                    ورود با موفقیت انجام شد
+                </h2>
+            </div>
+            <script>
+                $(document).ready(function () {
+                    setTimeout(function () {
+                        window.location.href = "/"
+                    }, 3000);
+                });
+            </script>
+        }
+
+        @if (ViewBag.IsSuccess == false)
+        {
+            <div class="alert alert-danger">
+                <h2 class="help-text">
+                    نام کاربری یا رمز عبور صحیح نمی باشد
+                </h2>
+            </div>
+        }
+
+        @if (ViewBag.IsNotActivate == true)
+        {
+            <div class="alert alert-danger">
+                <h2 class="help-text">
+                    کاربر شما فعال نمی باشد لطفا جهت فعال سازی آن با مدیر سایت تماس حاصل فرمایید
+                </h2>
+            </div>
+        }
+
+
+
         <div class="form-layer">
 
-            <form action="" method="">
+            <form asp-action="Login" asp-controller="Account" method="post">
 
                 <div class="input-group">
                     <span class="input-group-addon" id="email-address"><i class="zmdi zmdi-email"></i></span>
-                    <input type="text" class="form-control" placeholder="ایمیل" aria-describedby="email-address">
+                    <input type="text" asp-for="Email" class="form-control" placeholder="ایمیل" aria-describedby="email-address">
                 </div>
+                <span asp-validation-for="Email"></span>
 
                 <div class="input-group">
                     <span class="input-group-addon" id="password"><i class="zmdi zmdi-lock"></i></span>
-                    <input type="text" class="form-control" placeholder="رمز عبور " aria-describedby="password">
+                    <input type="password" asp-for="Password" class="form-control" placeholder="رمز عبور " aria-describedby="password">
                 </div>
+                <span asp-validation-for="Password"></span>
 
                 <div class="remember-me">
-                    <label><input type="checkbox" name="">  مرا بخاطر بسپار </label>
+                    <label><input type="checkbox" asp-for="RememberMe" name="RememberMe">  مرا بخاطر بسپار </label>
                 </div>
 
                 <div class="link">
-                    <a href=""> <i class="zmdi zmdi-lock"></i> رمز عبور خود را فراموش کرده ام !</a>
-                    <a href=""> <i class="zmdi zmdi-account"></i> عضویت در سایت </a>
+                    <a href="/ForgotPassword"> <i class="zmdi zmdi-lock"></i> رمز عبور خود را فراموش کرده ام !</a>
+                    <a href="/register"> <i class="zmdi zmdi-account"></i> عضویت در سایت </a>
                 </div>
 
-                <button class="btn btn-success"> ورود به سایت </button>
-
+                <button type="submit" class="btn btn-success"> ورود به سایت </button>
             </form>
         </div>
 
