--- a/CourseShop/CourseShop.Web/Views/Shared/_Nav.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Shared/_Nav.cshtml
@@ -11,14 +11,22 @@
         </div>
         <div class="col-sm-6 col-xs-12">
             <div class="clientarea">
-                <div class="loggein hidden ">
-                    <i class="zmdi zmdi-account"></i><a href=""> هاتف خودکار ، خوش آمدی </a>
-                </div>
-                <div class="signin ">
-                    <i class="zmdi zmdi-account"></i>
-                    <a href="/login"> ورود </a> /
-                    <a href="/register"> عضویت </a>
-                </div>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <div class="loggein">
+                        <i class="zmdi zmdi-account"></i><a href=""> @User.Identity.Name  ، خوش آمدی </a>
+                        /
+                        <a href="/Logout">خروج</a>
+                    </div>
+                }
+                else
+                {
+                    <div class="signin ">
+                        <i class="zmdi zmdi-account"></i>
+                        <a href="/login"> ورود </a> /
+                        <a href="/register"> عضویت </a>
+                    </div>
+                }
             </div>
         </div>
     </div>
