implement UserProfileEdit and ChangePassword

--- a/CourseShop/CourseShop.Web/Views/Account/ForgottenPassword.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Account/ForgottenPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseShop.Core.DTO.ForgotPasswordViewModel
+﻿@model CourseShop.Core.DTOs.ForgotPasswordViewModel
 @{
     ViewData["Title"] = "فراموشی رمز عبور";
 }
@@ -50,7 +50,7 @@
                 <span asp-validation-for="Email"></span>
 
                 <div class="link">
-                    <a href=""> <i class="zmdi zmdi-account"></i> ورود به سایت </a>
+                    <a href="/login"> <i class="zmdi zmdi-account"></i> ورود به سایت </a>
                 </div>
 
                 <button class="btn btn-success"> ثبت </button>
