--- a/CourseShop/CourseShop.Web/Views/Account/Login.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseShop.Core.DTO.LoginViewModel
+﻿@model CourseShop.Core.DTOs.LoginViewModel
 
 @{
     ViewData["Title"] = "ورود به سایت";
@@ -27,8 +27,8 @@
             <script>
                 $(document).ready(function () {
                     setTimeout(function () {
-                        window.location.href = "/"
-                    }, 3000);
+                        window.location.href = "/userpanel"
+                    }, 2000);
                 });
             </script>
         }
