--- a/CourseShop/CourseShop.Web/Views/Account/Register.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseShop.Core.DTO.RegisterViewModel
+﻿@model CourseShop.Core.DTOs.RegisterViewModel
 
 @{
     ViewData["Title"] = "عضویت در سایت";
@@ -8,7 +8,7 @@
 <div class="container">
     <nav aria-label="breadcrumb">
         <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">فروشگاه دوره</a></li>
+            <li class="breadcrumb-item"><a href="/">فروشگاه دوره</a></li>
             <li class="breadcrumb-item active" aria-current="page">عضویت در سایت</li>
         </ul>
     </nav>
