--- a/CourseShop/CourseShop.Web/Views/Account/SuccessfullRegistration.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Account/SuccessfullRegistration.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseShop.Core.DTO.RegisterViewModel
+﻿@model CourseShop.Core.DTOs.RegisterViewModel
 
 @{
     ViewData["Title"] = "فروشگاه دوره";
