--- a/CourseShop/CourseShop.Web/Views/Shared/_Layout.cshtml
+++ b/CourseShop/CourseShop.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <partial name="_MetaTags" />
     <partial name="_Styles" />
     <script src="/js/jquery.min.js"></script>
+    <script src="/js/FontAwsome.js"></script>
 </head>
 
 <body>
