add wallet and Inline Payment to project

--- a/CourseShop/CourseShop.Web/Areas/UserPanel/Views/Home/Index.cshtml
+++ b/CourseShop/CourseShop.Web/Areas/UserPanel/Views/Home/Index.cshtml
@@ -32,6 +32,7 @@
                                     <li> <i class="zmdi zmdi-assignment-account"></i> نام کاربری :  @Model.Username </li>
                                     <li> <i class="zmdi zmdi-email"></i> ایمیل : @Model.Email </li>
                                     <li> <i class="zmdi zmdi-calendar-check"></i> تاریخ عضویت : @Model.RegisterDate.ToShamsi() </li>
+                                    <li> <i class="zmdi zmdi-balance-wallet"></i> موجودی کیف پول شما :  @ViewBag.Balance.ToString("#,0") تومان </li>
                                 </ul>
                             </div>
                         </div>
