--- a/CourseShop/CourseShop.Web/Areas/UserPanel/Views/Home/EditProfile.cshtml
+++ b/CourseShop/CourseShop.Web/Areas/UserPanel/Views/Home/EditProfile.cshtml
@@ -33,9 +33,9 @@
                                     </div>
                                     <div class="col-md-7 col-sm-8 col-xs-12">
                                         <div class="input-group">
-                                            <label for="file-upload" class="custom-file-upload" style="width 80px">
+                                            <label for="file-upload" class="custom-file-upload" style="width : 80px">
                                                 <i class="zmdi zmdi-upload"></i>
-                                                <span class="text-help">آپلود عکس</span>
+                                                <span>آپلود عکس</span>
                                             </label>
                                             <input asp-for="UserAvatar" id="file-upload" type="file" style="display:none" />
                                             <p>لطفا تصویری انتخاب کنید</p>
