--- a/CourseShop/CourseShop.Web/Areas/UserPanel/Views/Shared/_Sidebar.cshtml
+++ b/CourseShop/CourseShop.Web/Areas/UserPanel/Views/Shared/_Sidebar.cshtml
@@ -13,8 +13,8 @@
             <img src="/UserAvatar/@UserInf.AvatarName">
         </div>
         <div class="detail">
-            <span> @UserInf.Username </span>
-            <span> @UserInf.RegisterDate.ToShamsi() </span>
+            <span> نام کاربری : @UserInf.Username </span>
+            <span> تاریخ ثبت نام :  @UserInf.RegisterDate.ToShamsi() </span>
         </div>
     </div>
     <section>
@@ -22,9 +22,9 @@
         <div class="inner">
             <ul>
                 <li><a href="/UserPanel"> مشاهده حساب کابری </a></li>
-                <li><a href="/UserPanel/EditProfile"> ویرایش حساب کابری </a></li>
+                <li><a href="/UserPanel/EditProfile"> تغییر عکس حساب کابری </a></li>
                 <li><a href="/UserPanel/ChangePassword"> تغییر رمز عبور </a></li>
-                <li><a href=""> تنظیمات حساب کاربری </a></li>
+                <li><a href="/UserPanel/Wallet"> کیف پول شما </a></li>
                 <li><a href="/Logout"> خروج از حساب کاربری </a></li>
             </ul>
         </div>
