--- a/CourseShop/CourseShop.Web/Pages/Admin/index.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/index.cshtml
@@ -9,13 +9,12 @@
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    داشبرد
-                    <small>کنترل پنل</small>
-                </h1>
-                <ol class="breadcrumb">
+                <ul class="breadcrumb">
                     <li><a href="#"><i class="fa fa-dashboard"></i> خانه</a></li>
                     <li class="active">داشبرد</li>
-                </ol>
+                </ul>
+                </h1>
+
             </section>
             <!-- Main content -->
             <section class="content">
