--- a/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
@@ -39,7 +39,7 @@
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header">
-                                    <img src="/UserAvatar/default.jpg" class="img-circle" alt="User Image">
+                                    <img src="/UserAvatar/@user.AvatarName" class="img-circle" alt="User Image">
 
                                     <p style="color:black">
                                         @User.Identity.Name
