--- a/CourseShop/CourseShop.Web/Pages/Admin/index.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/index.cshtml
@@ -5,15 +5,15 @@
     ViewData["Title"] = "داشبورد";
 }
 
-        <div class="content-wrapper">
+
             <!-- Content Header (Page header) -->
             <section class="content-header">
-                <h1>
+                <h3>
                 <ul class="breadcrumb">
-                    <li><a href="#"><i class="fa fa-dashboard"></i> خانه</a></li>
-                    <li class="active">داشبرد</li>
+                    <li><a href="#"><i class="fa fa-dashboard"></i>پنل مدیریت </a></li>
+                    <li class="active">داشبورد</li>
                 </ul>
-                </h1>
+                </h3>
 
             </section>
             <!-- Main content -->
@@ -79,4 +79,3 @@
                 </div>
             </section>
             <!-- /.content -->
-        </div>
