--- a/CourseShop/CourseShop.Web/wwwroot/AdminLayout/css/CustomeStyle.css
+++ b/CourseShop/CourseShop.Web/wwwroot/AdminLayout/css/CustomeStyle.css
@@ -1,3 +1,32 @@
 ﻿.breadcrumb{
     background:none !important;
 }
+
+.field-validation-error {
+    color: #fe8080 !important
+}
+
+.input-validation-error {
+    border: 1px solid #fe8080;
+}
+
+.custom-file-upload {
+    background-color: #FF975B;
+    display: inline-block;
+    padding: 6px;
+    cursor: pointer;
+    color: white;
+    border-radius: 5px;
+}
+
+
+.thumbnail {
+    padding: 4px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    -webkit-transition: border .2s ease-in-out;
+    -o-transition: border .2s ease-in-out;
+    transition: border .2s ease-in-out;
+}
