implement add user for admin panel

--- a/CourseShop/CourseShop.Web/Pages/Shared/_Partial_ButtomScripts.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Shared/_Partial_ButtomScripts.cshtml
@@ -5,7 +5,7 @@
 <script src="/AdminLayout/js/jquery-ui.min.js"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 <script>
-        $.widget.bridge('uibutton', $.ui.button);
+    $.widget.bridge('uibutton', $.ui.button);
 </script>
 <!-- Bootstrap 3.3.7 -->
 <script src="/AdminLayout/js/bootstrap.min.js"></script>
@@ -28,3 +28,7 @@
 <script src="/AdminLayout/js/pages/dashboard.js"></script>
 <!-- AdminLTE for demo purposes -->
 @*<script src="/AdminLayout/js/demo.js"></script>*@
+
+<script src="/js/jquery.validate.min.js"></script>
+
+<script src="/js/jquery.validate.unobtrusive.min.js"></script>
