--- a/CourseShop/CourseShop.Web/Pages/Admin/Users/Create.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/Users/Create.cshtml
@@ -19,15 +19,19 @@
                     <div class="box-body">
                         <div class="form-group">
                             <input asp-for="CreateUserViewModel.Username" type="text" class="form-control"  placeholder="نام کاربری">
+                            <span asp-validation-for="CreateUserViewModel.Username"></span>
                         </div>
                         <div class="form-group">
                             <input asp-for="CreateUserViewModel.Email" type="email" class="form-control" placeholder="ایمیل">
+                            <span asp-validation-for="CreateUserViewModel.Email"></span>
                         </div>
                         <div class="form-group">
                             <input asp-for="CreateUserViewModel.Password" type="password" class="form-control" placeholder="رمز عبور" />
+                            <span asp-validation-for="CreateUserViewModel.Password"></span>
                         </div>
                         <div class="form-group">
                             <input asp-for="CreateUserViewModel.Repassword" type="password" class="form-control" placeholder="تکرار رمز عبور" />
+                            <span asp-validation-for="CreateUserViewModel.Repassword"></span>
                         </div>
                         <div class="box-footer clearfix">
                             <button type="submit" class=" btn btn-success">
@@ -36,11 +40,7 @@
                         </div>
 
                     </div>
-                    @*<div class="box-footer clearfix">
-                            <button type="submit" class=" btn btn-success" >
-                                    ثبت کاربر
-                            </button>
-                        </div>*@
+
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
@@ -54,7 +54,7 @@
                     <div class="box-body">
                         <div class="row">
                             <div class="col-md-7 col-sm-8 col-xs-12" style="padding:8px">
-                                <img id="imgAvatar" class="img-thumbnail" style="padding-bottom:8px" src="/UserAvatar/default.jpg">
+                                <img id="imgAvatar" name="AvatarName" class="img-thumbnail" style="padding-bottom:8px" src="/UserAvatar/default.jpg">
                             </div>
                             <div class="col-md-7 col-sm-8 col-xs-12">
                                 <div class="input-group">
