--- a/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
@@ -33,13 +33,13 @@
                         <!-- Messages: style can be found in dropdown.less-->
                         <li class="dropdown user user-menu ">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                <img src="/UserAvatar/@user.AvatarName" class="user-image" alt="User Image">
+                                <img src="/UserAvatar/@user.UserAvatar" class="user-image" alt="User Image">
                                 <span class="hidden-xs">@User.Identity.Name</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header">
-                                    <img src="/UserAvatar/@user.AvatarName" class="img-circle" alt="User Image">
+                                    <img src="/UserAvatar/@user.UserAvatar" class="img-circle" alt="User Image">
 
                                     <p style="color:black">
                                         @User.Identity.Name
@@ -70,7 +70,7 @@
                 <!-- Sidebar user panel -->
                 <div class="user-panel">
                     <div class="pull-right image">
-                        <img src="/UserAvatar/@user.AvatarName" class="img-circle" alt="User Image">
+                        <img src="/UserAvatar/@user.UserAvatar" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-right info">
                         <p> @User.Identity.Name  </p>
