--- a/CourseShop/CourseShop.Web/Pages/Admin/Users/Index.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/Users/Index.cshtml
@@ -21,7 +21,6 @@
             <div class="col-xs-12">
                 <div class="box">
                     <div class="box-header">
-                        <h3>لیست کاربران</h3>
                         <div>
                             <a href="users/create" class="btn btn-success">
                                 ایجاد کاربر جدید
@@ -38,7 +37,7 @@
                         </div>
                     </div>
                     <!-- /.box-header -->
-                    <div class="box-body table-responsive no-padding">
+                    <div class="box-body table-responsive">
                         <table class="table table-hover">
                             <tbody>
                                 <tr>
@@ -54,7 +53,7 @@
                                         <td>@item.Email</td>
                                         <td>@item.RegisterDate.ToShamsi()</td>
                                         <td>
-                                            <a class="btn btn-warning">
+                                            <a href="/Admin/users/editUser/@item.UserId" class="btn btn-warning">
                                                ویرایش
                                             </a>
                                             <a href="#" class="btn btn-danger">
