--- a/CourseShop/CourseShop.Web/Pages/Admin/Users/Index.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/Users/Index.cshtml
@@ -4,71 +4,121 @@
     ViewData["Title"] = "لیست کاربران";
 }
 
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <h3>
-            <ul class="breadcrumb">
-                <li><a href="#"><i class="fa fa-dashboard"></i> پنل مدیریت </a></li>
-                <li class="active">لیست کاربران</li>
-            </ul>
-        </h3>
-    </section>
+<!-- Content Header (Page header) -->
+<section class="content-header">
+    <h3>
+        <ul class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> پنل مدیریت </a></li>
+            <li class="active">لیست کاربران</li>
+        </ul>
+    </h3>
+</section>
 
-    <!-- Main content -->
-    <section class="content">
-        <!-- /.row -->
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="box">
-                    <div class="box-header">
-                        <div>
-                            <a href="users/create" class="btn btn-success">
-                                ایجاد کاربر جدید
-                            </a>
-                        </div>
-                        <div class="box-tools">
-                            <div class="input-group input-group-sm" style="width: 150px;">
-                                <input type="text" name="table_search" class="form-control pull-right" placeholder="جستجو">
+<!-- Main content -->
+<section class="content">
+    <!-- /.row -->
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="box">
+                <div class="box-header">
+                    <div>
+                        <a href="users/create" class="btn btn-success">
+                            ایجاد کاربر جدید
+                        </a>
+                    </div>
+                    <div class="box-tools">
+                        <div class="input-group input-group-sm" style="width: 150px;">
+                            <input type="text" name="table_search" class="form-control pull-right" placeholder="جستجو">
 
-                                <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-                                </div>
+                            <div class="input-group-btn">
+                                <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
                             </div>
                         </div>
                     </div>
-                    <!-- /.box-header -->
-                    <div class="box-body table-responsive">
-                        <table class="table table-hover">
-                            <tbody>
-                                <tr>
-                                    <th>نام کاربری</th>
-                                    <th>ایمیل</th>
-                                    <th>تاریخ عضویت</th>
-                                    <th></th>
-                                </tr>
-                                @foreach (var item in Model.UsersForAdmin)
-                                {
-                                    <tr>
-                                        <td>@item.Username</td>
-                                        <td>@item.Email</td>
-                                        <td>@item.RegisterDate.ToShamsi()</td>
-                                        <td>
-                                            <a href="/Admin/users/editUser/@item.UserId" class="btn btn-warning">
-                                               ویرایش
-                                            </a>
-                                            <a href="#" class="btn btn-danger">
-                                                حذف
-                                            </a>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-                    </div>
-                    <!-- /.box-body -->
                 </div>
-                <!-- /.box -->
+                <!-- /.box-header -->
+                <div class="box-body table-responsive">
+                    <table id="table">
+                        <thead>
+                            <tr>
+                                <th>نام کاربری</th>
+                                <th>ایمیل</th>
+                                <th>تاریخ عضویت</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.UsersForAdmin)
+                            {
+                                <tr>
+                                    <td>@item.Username</td>
+                                    <td>@item.Email</td>
+                                    <td>@item.RegisterDate.ToShamsi()</td>
+                                    <td>
+                                        <a href="/Admin/users/editUser/@item.UserId" class="btn btn-warning">
+                                            ویرایش
+                                        </a>
+                                        <a href="#" class="btn btn-danger">
+                                            حذف
+                                        </a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /.box-body -->
             </div>
+            <!-- /.box -->
         </div>
-    </section>
-    <!-- /.content -->
+    </div>
+</section>
+<!-- /.content -->
+<script src="/js/jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#table").DataTable();
+    })
+</script>
+
+<script type="text/javascript">
+    var persianSort = ['آ', 'ا', 'ب', 'پ', 'ت', 'ث', 'ج', 'چ', 'ح', 'خ', 'د', 'ذ', 'ر', 'ز', 'ژ', 'س', 'ش', 'ص', 'ط', 'ظ', 'ع', 'غ', 'ف', 'ق', 'ک', 'گ', 'ل', 'م', 'ن', 'و', 'ه', 'ي', 'ي'];
+    function GetUniCode(source) {
+        source = $.trim(source);
+        var result = '';
+        var i, index;
+        for (i = 0; i < source.length; i++) {
+            //Check and fix IE indexOf bug
+            if (!Array.indexOf) {
+                index = jQuery.inArray(source.charAt(i), persianSort);
+            } else {
+                index = persianSort.indexOf(source.charAt(i));
+            }
+            if (index < 0) {
+                index = source.charCodeAt(i);
+            }
+            if (index < 10) {
+                index = '0' + index;
+            }
+            result += '00' + index;
+        }
+
+        return 'a' + result;
+    }
+    jQuery.extend(jQuery.fn.dataTableExt.oSort, {
+        "pstring-pre": function (a) {
+            return GetUniCode(a.toLowerCase());
+        },
+
+        "pstring-asc": function (a, b) {
+            return ((a < b) ? -1 : ((a > b) ? 1 : 0));
+        },
+
+        "pstring-desc": function (a, b) {
+            return ((a < b) ? 1 : ((a > b) ? -1 : 0));
+        }
+    });
+
+</script>
