--- a/CourseShop/CourseShop.Web/Pages/Shared/_Partial_ButtomScripts.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Shared/_Partial_ButtomScripts.cshtml
@@ -1,6 +1,6 @@
 ﻿    <!-- ./wrapper -->
 <!-- jQuery 3 -->
-<script src="/js/jquery.min.js"></script>
+@*<script src="/js/jquery.min.js"></script>*@
 <!-- jQuery UI 1.11.4 -->
 <script src="/AdminLayout/js/jquery-ui.min.js"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
@@ -32,3 +32,5 @@
 <script src="/js/jquery.validate.min.js"></script>
 
 <script src="/js/jquery.validate.unobtrusive.min.js"></script>
+
+
