change data table styles

--- a/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
@@ -9,6 +9,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="/js/jquery.min.js"></script>
     <partial name="_Partial_MetaTags" />
     <partial name="_Partial_Styles" />
 </head>
