--- a/CourseShop/CourseShop.Web/Pages/Admin/Users/Index.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/Users/Index.cshtml
@@ -26,19 +26,12 @@
                             ایجاد کاربر جدید
                         </a>
                     </div>
-                    <div class="box-tools">
-                        <div class="input-group input-group-sm" style="width: 150px;">
-                            <input type="text" name="table_search" class="form-control pull-right" placeholder="جستجو">
-
-                            <div class="input-group-btn">
-                                <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body table-responsive">
-                    <table id="table">
+                    <table id="table" class="hover row-border order-column">
+
+
                         <thead>
                             <tr>
                                 <th>نام کاربری</th>
@@ -55,11 +48,11 @@
                                     <td>@item.Email</td>
                                     <td>@item.RegisterDate.ToShamsi()</td>
                                     <td>
-                                        <a href="/Admin/users/editUser/@item.UserId" class="btn btn-warning">
-                                            ویرایش
+                                        <a href="/Admin/users/editUser/@item.UserId" class=" ">
+                                            <i class="fa fa-edit fa-lg" style="padding:10px;color:#FF975B"></i>
                                         </a>
-                                        <a href="#" class="btn btn-danger">
-                                            حذف
+                                        <a href="#" >
+                                            <i class="fa fa-trash fa-lg" style="padding:10px;color:#fe8080"></i>
                                         </a>
                                     </td>
                                 </tr>
@@ -74,12 +67,12 @@
     </div>
 </section>
 <!-- /.content -->
-<script src="/js/jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
+<script src="/AdminLayout/js/jquery.dataTables.js"></script>
 <script>
     $(document).ready(function () {
-        $("#table").DataTable();
+        $("#table").DataTable({
+            "dom": '<"top"f>rt<"bottom"lp><"clear">'
+        });
     })
 </script>
 
