--- a/CourseShop/CourseShop.Web/Pages/Shared/_Partial_Styles.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Shared/_Partial_Styles.cshtml
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="/AdminLayout/css/skins/_all-skins.min.css">
 <link rel="stylesheet" href="/AdminLayout/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
 <link rel="stylesheet" href="/AdminLayout/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="/AdminLayout/css/jquery.dataTables.css">
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
