--- a/CourseShop/CourseShop.Web/wwwroot/AdminLayout/css/jquery.dataTables.css
+++ b/CourseShop/CourseShop.Web/wwwroot/AdminLayout/css/jquery.dataTables.css
@@ -369,18 +369,18 @@ table.dataTable {
             text-align: center;
             text-decoration: none !important;
             cursor: pointer;
-            *cursor: hand;
             color: white !important;
             border: 1px solid transparent;
             border-radius: 4px;
+            background: #FF975B;
         }
 
             .dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
-                color: #333 !important;
+                /*color: #333 !important;
                 border: 1px solid #979797;
                 background-color: white;
                 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, #dcdcdc));
-                /* Chrome,Safari4+ 
+                 Chrome,Safari4+ 
                 background: -webkit-linear-gradient(top, white 0%, #dcdcdc 100%);
                  Chrome10+,Safari5.1+ 
                 background: -moz-linear-gradient(top, white 0%, #dcdcdc 100%);
@@ -390,9 +390,9 @@ table.dataTable {
                 background: -o-linear-gradient(top, white 0%, #dcdcdc 100%);
                  Opera 11.10+ 
                 background: linear-gradient(to bottom, white 0%, #dcdcdc 100%);
-                 W3C 
-                /*background-color: #3c8dbc;
-                border-color: #367fa9;*/
+                 W3C*/ 
+                background-color: #3c8dbc;
+                border-color: #367fa9;
             }
 
             .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
@@ -405,19 +405,19 @@ table.dataTable {
 
             .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
                 color: white !important;
-                border: 1px solid #111;
-                background-color: #585858;
-                background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #585858), color-stop(100%, #111));
-                /* Chrome,Safari4+ */
+                border: 1px solid #367fa9;
+                background-color: #3c8dbc;
+                /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #585858), color-stop(100%, #111));*/
+                /* Chrome,Safari4+ 
                 background: -webkit-linear-gradient(top, #585858 0%, #111 100%);
                 /* Chrome10+,Safari5.1+ */
-                background: -moz-linear-gradient(top, #585858 0%, #111 100%);
+                /*background: -moz-linear-gradient(top, #585858 0%, #111 100%);*/
                 /* FF3.6+ */
-                background: -ms-linear-gradient(top, #585858 0%, #111 100%);
+                /*background: -ms-linear-gradient(top, #585858 0%, #111 100%);*/
                 /* IE10+ */
-                background: -o-linear-gradient(top, #585858 0%, #111 100%);
+                /*background: -o-linear-gradient(top, #585858 0%, #111 100%);*/
                 /* Opera 11.10+ */
-                background: linear-gradient(to bottom, #585858 0%, #111 100%);
+                /*background: linear-gradient(to bottom, #585858 0%, #111 100%);*/
                 /* W3C */
             }
 
@@ -543,9 +543,9 @@ select[name="table_length"] {
     border-radius: 6px !important;
 }
 
-select[name="table_length"]:focus {
-    border:none;
-}
+    select[name="table_length"]:focus {
+        border: none;
+    }
 
 .dataTables_wrapper .dataTables_filter {
     float: left;
