--- a/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
@@ -54,7 +54,7 @@
                                         <a href="#" class="btn btn-info">پروفایل</a>
                                     </div>
                                     <div class="pull-left">
-                                        <a href="#" class="btn btn-warning">خروج</a>
+                                        <a href="/logout" class="btn btn-warning">خروج</a>
                                     </div>
                                 </li>
                             </ul>
@@ -114,12 +114,6 @@
                             </span>
                         </a>
                     </li>
-                    @*<li>
-                            <a href="#">
-                                <i class="fa fa-trash-o"></i>
-                                کاربران حذف شده
-                            </a>
-                        </li>*@
                 </ul>
             </section>
             <!-- /.sidebar -->
