add roles index and create form

--- a/CourseShop/CourseShop.Web/Pages/Admin/Users/Create.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/Users/Create.cshtml
@@ -23,7 +23,7 @@
 
                 <div class="box box-warning">
                     <div class="box-header ui-sortable-handle" style="cursor: move;">
-                        <i class="fa fa-user"></i>
+                        <i class="fa fa-user-plus"></i>
 
                         <h3 class="box-title">ثبت کاربر</h3>
                     </div>
@@ -115,7 +115,6 @@
 
 </section>
 
-<script src="/js/jquery.min.js"></script>
 
 <script>
     function readURL(input) {
