--- a/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Shared/_AdminLayout.cshtml
@@ -116,7 +116,7 @@
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="#"> لیست نقش های سیستم</a></li>
+                            <li><a href="/Admin/roles"> لیست نقش های سیستم</a></li>
                             <li>
                             </li>
                         </ul>
