--- a/CourseShop/CourseShop.Web/Pages/Admin/Roles/Index.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/Roles/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@page
-@model CourseShop.Web.Pages.Admin.Users.IndexModel
+@model CourseShop.Web.Pages.Admin.Roles.IndexModel
 @{
-    ViewData["Title"] = "لیست کاربران";
+    ViewData["Title"] = "لیست  نقش ها";
 }
 
 <section class="content-header">
     <h3>
         <ul class="breadcrumb">
             <li><a href="/admin"><i class="fa fa-dashboard"></i> پنل مدیریت </a></li>
-            <li class="active">لیست کاربران</li>
+            <li class="active">لیست  نقش ها</li>
         </ul>
     </h3>
 </section>
@@ -19,8 +19,8 @@
             <div class="box">
                 <div class="box-header">
                     <div>
-                        <a href="users/create" class="btn btn-success">
-                            ایجاد کاربر جدید
+                        <a href="roles/create" class="btn btn-success">
+                            ایجاد نقش جدید
                         </a>
                     </div>
                 </div>
@@ -28,35 +28,20 @@
                     <table id="table" class="hover row-border order-column">
                         <thead>
                             <tr>
-                                <th>نام کاربری</th>
-                                <th>ایمیل</th>
-                                <th>تاریخ عضویت</th>
-                                <th>وضعیت</th>
+                                <th>نام نقش</th>
                                 <th></th>
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (var item in Model.UsersForAdmin)
+                            @foreach (var item in Model.RolesList)
                             {
                                 <tr>
-                                    <td>@item.Username</td>
-                                    <td>@item.Email</td>
-                                    <td>@item.RegisterDate.ToShamsi()</td>
+                                    <td>@item.RoleTitle</td>
                                     <td>
-                                        @if (@item.IsActive)
-                                        {
-                                            <p style="color:#008D4C">فعال</p>
-                                        }
-                                        else
-                                        {
-                                            <p style="color:#fe8080">غیرفعال</p>
-                                        }
-                                    </td>
-                                    <td>
-                                        <a href="/Admin/users/editUser/@item.UserId" class=" ">
+                                        <a href="/Admin/users/editUser/@item.RoleId" class=" ">
                                             <i class="fa fa-edit fa-lg" style="padding:10px;color:#FF975B"></i>
                                         </a>
-                                        <a id="delete" style="cursor:pointer" data-toggle="modal" onclick="test(this)" data-id="@item.UserId" data-username="@item.Username" data-target="#modal-default">
+                                        <a id="delete" style="cursor:pointer" data-toggle="modal" onclick="test(this)" data-id="@item.RoleId" data-username="@item.RoleTitle" data-target="#modal-default">
                                             <i class="fa fa-trash fa-lg" style="padding:10px;color:#fe8080"></i>
                                         </a>
                                     </td>
@@ -69,6 +54,7 @@
         </div>
     </div>
 </section>
+
 
 <div class="modal fade in" id="modal-default" style=" padding-right: 17px;">
     <div class="modal-dialog">
@@ -117,4 +103,3 @@
         $("button.close").trigger('click')
     })
 </script>
-
