--- a/CourseShop/CourseShop.Web/Pages/Admin/Roles/Edit.cshtml
+++ b/CourseShop/CourseShop.Web/Pages/Admin/Roles/Edit.cshtml
@@ -1,8 +1,9 @@
-﻿@page
-@model CourseShop.Web.Pages.Admin.Roles.CreateModel
+﻿@page "{id}"
+@model CourseShop.Web.Pages.Admin.Roles.EditModel
 @{
-    ViewData["Title"] = "ایجاد نقش جدید";
+    ViewData["Title"] = "ویرایش نقش";
 }
+
 
 <section class="content-header">
     <h3>
@@ -58,7 +59,7 @@
                                 @foreach (var permission in Model.PermissionsList.Where(p => p.ParrentId == null))
                                 {
                                     <li>
-                                        <input type="checkbox" name="permissionIdList" value="@permission.PermissionId" />
+                                        <input type="checkbox" name="permissionIdList" @(Model.SelectedPermission.Any(r => r==@permission.PermissionId) ? "checked" : "") value="@permission.PermissionId" />
                                         <label>@permission.PermissionTitle</label>
                                     </li>
                                     @if (Model.PermissionsList.Any(p => p.ParrentId == permission.PermissionId))
@@ -68,7 +69,7 @@
                                             @foreach (var subPermissions in Model.PermissionsList.Where(p => p.ParrentId == permission.PermissionId))
                                             {
                                                 <li>
-                                                    <input type="checkbox" name="permissionIdList" value="@subPermissions.PermissionId" />
+                                                    <input type="checkbox" name="permissionIdList"  @(Model.SelectedPermission.Any(r => r==@subPermissions.PermissionId) ? "checked" : "")  value="@subPermissions.PermissionId" />
                                                     <label>@subPermissions.PermissionTitle</label>
                                                 </li>
                                                 @if (Model.PermissionsList.Any(p => p.ParrentId == subPermissions.PermissionId))
@@ -77,7 +78,7 @@
                                                         @foreach (var item in Model.PermissionsList.Where(p => p.ParrentId == subPermissions.PermissionId))
                                                         {
                                                             <li>
-                                                                <input type="checkbox" name="permissionIdList" value="@item.PermissionId" />
+                                                                <input type="checkbox" name="permissionIdList"  @(Model.SelectedPermission.Any(r => r==@item.PermissionId) ? "checked" : "")  value="@item.PermissionId" />
                                                                 <label>@item.PermissionTitle</label>
                                                             </li>
                                                         }
@@ -99,7 +100,4 @@
     </form>
 
 </section>
-
-
-
 
